Updated to include eslint

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.0"
   }
 }
