--- a/package.json
+++ b/package.json
@@ -25,6 +25,29 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "eslint": "^6.5.0"
+    "@opengovsg/eslint-config-opengovsg": "^1.0.6",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.0.7",
+    "lint-staged": "^9.4.0",
+    "pre-commit": "^1.2.2"
+  },
+  "pre-commit": [
+    "lint"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
