--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a slack app that communicates with the github api v3 to add or remove team members",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [
     "github",
@@ -16,6 +17,7 @@
   "dependencies": {
     "@octokit/app": "^4.1.0",
     "@octokit/request": "^5.1.0",
+    "@slack/interactive-messages": "^1.3.0",
     "@slack/web-api": "^5.1.0",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
