--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "objects-to-csv": "^1.3.4",
     "request": "^2.88.0",
     "tmp": "^0.1.0"
   },
