--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@octokit/request": "^5.1.0",
     "@slack/interactive-messages": "^1.3.0",
     "@slack/web-api": "^5.1.0",
+    "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "objects-to-csv": "^1.3.4",
+    "query-string": "^6.10.1",
     "request": "^2.88.0",
-    "tmp": "^0.1.0"
+    "tmp": "^0.1.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@opengovsg/eslint-config-opengovsg": "^1.0.6",
