--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "objects-to-csv": "^1.3.4",
+    "pg": "^7.17.1",
     "query-string": "^6.10.1",
     "request": "^2.88.0",
+    "sequelize": "^5.21.3",
     "tmp": "^0.1.0",
     "uuid": "^3.4.0"
   },
