--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   },
   "devDependencies": {
     "@opengovsg/eslint-config-opengovsg": "^1.0.6",
+    "cross-spawn": "^7.0.1",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "execa": "^4.0.0",
     "husky": "^3.0.7",
     "lint-staged": "^9.4.0",
     "pre-commit": "^1.2.2"
